[tool.poetry]
name = "bulls-and-cows"
version = "0.1.0"
description = ""
authors = ["Andrey Potapov <aapot@ya.ru>"]
readme = "README.md"
packages = [{include = "bulls_and_cows"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
